# sepehran-flight-project

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini
conf_test/: f_flights.py
core/: settings.py  urls.py
core/base/: exceptions.py  hooks.py  paginations.py  renderers.py
flights/: filters.py  models.py  serializers.py  urls.py  views.py
flights/management/commands/: setup_data.py
flights/migrations/: 0001_initial.py
flights/tests/: test_apis.py  test_models.py
